--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -14,11 +14,16 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 
   # Fowards Ports. Host is the Port seen on Host Computer, guest is the Port used by the VM
   config.vm.network :forwarded_port, host: 80, guest: 80
+  config.vm.network :private_network, ip: '192.168.50.50'
 
   # Configuration for Virtual Machine
   config.vm.provider "virtualbox" do |v|
     v.customize ["setextradata", :id, "VBoxInternal2/SharedFoldersEnableSymlinksCreate/v-root", "1"]
+    v.customize ["modifyvm", :id, "--memory", 2048]
+    v.customize ["modifyvm", :id, "--cpus", 2]
   end
+  
+  config.vm.synced_folder '.', '/vagrant', nfs: true
 
   # Disable automatic box update checking. If you disable this, then
   # boxes will only be checked for updates when the user runs
